fix header spacing on mobile interior pages

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1836,7 +1836,7 @@
         justify-content: center;
         align-items: center;
         min-height: 30vh;
-        padding-top: (50/16rem);
+        padding-top: (160/16rem);
 
         picture {
             z-index: -2;
